detalle de producto modificado

--- a/detalleProducto.html
+++ b/detalleProducto.html
@@ -72,14 +72,14 @@
                         </span>
                         <p class="text-white bookmark-text">Bookmark</p>
                     </div>
-                    <div class="view">
+                    <div class="view d-flex align-items-center">
                         <span class="text-white">
                             <i class="icon-grey far fa-user"></i>
                             1200
                         </span>
                         <p class="text-white my-1">Enrolled</p>
                     </div>
-                    <div class="stars">
+                    <div class="stars d-flex align-items-center">
                         <span class="estrellas">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -94,60 +94,109 @@
         </div>
     </section>
 
-    <section>
-        <div class="conteiner-detalle">
-            <div class="card">
-                <div class="conteiner-img">
-                    <img class="img-card" src="https://codescandy.com/geeks-bootstrap-5/assets/images/course/course-javascript.jpg" alt="">
-                </div>
-                <div class="card-body">
-                    <p class="price">$600 <span class="price-del">$750</span> </p>
-                    <!-- <div class="buttons"> -->
-                        <button class="button btn-morado">Srart Free Month</button>
-                        <button class="button btn-blanco">Get Full Access</button>
-                    <!-- </div> -->
-                </div>
+    <div class="div-theme">
+        <div class="theme">
+            <div class="theme-conteiner">
+                <ul>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">Introduction to JavaScript</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">JavaScript Beginning</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">Variables and Constants</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">Types and Operators</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">Program Flow</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">Functions</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">Objects and the DOM</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">Arrays</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list line">
+                        <a class="theme-conteiner-item text-violet" href="#">Scoped and Hoisting</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="theme-conteiner-list">
+                        <a class="theme-conteiner-item text-violet" href="#">Summary</a>
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                </ul>
             </div>
         </div>
+        <section class="conteiner-section">
+            <div class="conteiner-detalle">
+                <div class="card">
+                    <div class="conteiner-img">
+                        <img class="img-card" src="https://codescandy.com/geeks-bootstrap-5/assets/images/course/course-javascript.jpg" alt="">
+                    </div>
+                    <div class="card-body">
+                        <p class="price">$600 <span class="price-del">$750</span> </p>
+                        <!-- <div class="buttons"> -->
+                            <button class="button btn-morado">Srart Free Month</button>
+                            <button class="button btn-blanco">Get Full Access</button>
+                        <!-- </div> -->
+                    </div>
+                </div>
+            </div>
+    
+            <div class="card-included">
+                <ul style="padding: 0;">
+                    <li class="card-included-item line">
+                        <h3 class="card-included-title">What's included</h3>
+                    </li>
+                    <li class="card-included-item line">
+                        <span class="card-included-item-icon">
+                            <i class="far fa-play-circle"></i>
+                        </span>
+                        <p class="card-included-text">12 hours video</p>
+                    </li>
+                    <li class="card-included-item line">
+                        <span class="card-included-item-icon">
+                            <i class="fas fa-award"></i>
+                        </span>
+                        <p class="card-included-text">Certificate</p>
+                    </li>
+                    <li class="card-included-item line">
+                        <span class="card-included-item-icon">
+                            <i class="far fa-calendar"></i>
+                        </span>
+                        <p class="card-included-text">12 Article</p>
+                    </li>
+                    <li class="card-included-item line">
+                        <span class="card-included-item-icon">
+                            <i class="fas fa-video"></i>
+                        </span>
+                        <p class="card-included-text">Watch Offline</p>
+                    </li>
+                    <li class="card-included-item">
+                        <span class="card-included-item-icon">
+                            <i class="far fa-clock"></i>
+                        </span>
+                        <p class="card-included-text">Lifetime access</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
 
-        <div class="card-included">
-            <ul style="padding: 0;">
-                <li class="card-included-item line">
-                    <h3 class="card-included-title">What's included</h3>
-                </li>
-                <li class="card-included-item line">
-                    <span class="card-included-item-icon">
-                        <i class="far fa-play-circle"></i>
-                    </span>
-                    <p class="card-included-text">12 hours video</p>
-                </li>
-                <li class="card-included-item line">
-                    <span class="card-included-item-icon">
-                        <i class="fas fa-award"></i>
-                    </span>
-                    <p class="card-included-text">Certificate</p>
-                </li>
-                <li class="card-included-item line">
-                    <span class="card-included-item-icon">
-                        <i class="far fa-calendar"></i>
-                    </span>
-                    <p class="card-included-text">12 Article</p>
-                </li>
-                <li class="card-included-item line">
-                    <span class="card-included-item-icon">
-                        <i class="fas fa-video"></i>
-                    </span>
-                    <p class="card-included-text">Watch Offline</p>
-                </li>
-                <li class="card-included-item">
-                    <span class="card-included-item-icon">
-                        <i class="far fa-clock"></i>
-                    </span>
-                    <p class="card-included-text">Lifetime access</p>
-                </li>
-            </ul>
-        </div>
-    </section>
+    </div>
 
 </body>
 </html>
