--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="inicio">
                     <div class="conteiner">
                         <div class="inicio-conteiner conteiner-welcome">
-                            <h1 class="inicio-conteiner-title">Welcome to Geeks UI Learning Application</h1>
+                            <h1 id="inicio" class="inicio-conteiner-title"></h1>
                             <p class="inicio-conteiner-subtitle">Hand-picked Instuctor and expertly crafted courses, designed for the modern students and entrepreneur.</p>
                             <div>
                                 <button class="button btn-success">Browse Courses</button>
@@ -392,5 +392,9 @@
 
         </div>
     <!-- </div> -->
+
+    
+    <script src="./script/script.js"></script>
+
 </body>
 </html>
