--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/app.css">
     <link rel="stylesheet" href="./style/index.css">
 
-    <script src="script/script.js" defer></script>
+    <script src="script/index.js" defer></script>
 
     <title>Listado</title>
 </head>
