--- a/detalleProducto.html
+++ b/detalleProducto.html
@@ -265,41 +265,233 @@
                         <a class="theme-conteiner-item text-violet" href="#">Variables and Constants
                             <i class="fas fa-chevron-down"></i>
                         </a>
+                        <ul class="theme-conteiner-item-subitem">
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Introduction</p>
+                                    </div>
+                                    <p class="little-text-theme">1m 7s</p>
+                                </a>
+                            </li>
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Installing Development Software</p>
+                                    </div>
+                                    <p class="little-text-theme">3m 11s</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="theme-conteiner-list line">
                         <a class="theme-conteiner-item text-violet" href="#">Types and Operators
                             <i class="fas fa-chevron-down"></i>
                         </a>
+                        <ul class="theme-conteiner-item-subitem">
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Introduction</p>
+                                    </div>
+                                    <p class="little-text-theme">1m 7s</p>
+                                </a>
+                            </li>
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Installing Development Software</p>
+                                    </div>
+                                    <p class="little-text-theme">3m 11s</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="theme-conteiner-list line">
                         <a class="theme-conteiner-item text-violet" href="#">Program Flow
                             <i class="fas fa-chevron-down"></i>
                         </a>
+                        <ul class="theme-conteiner-item-subitem">
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Introduction</p>
+                                    </div>
+                                    <p class="little-text-theme">1m 7s</p>
+                                </a>
+                            </li>
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Installing Development Software</p>
+                                    </div>
+                                    <p class="little-text-theme">3m 11s</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="theme-conteiner-list line">
                         <a class="theme-conteiner-item text-violet" href="#">Functions
                             <i class="fas fa-chevron-down"></i>
                         </a>
+                        <ul class="theme-conteiner-item-subitem">
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Introduction</p>
+                                    </div>
+                                    <p class="little-text-theme">1m 7s</p>
+                                </a>
+                            </li>
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Installing Development Software</p>
+                                    </div>
+                                    <p class="little-text-theme">3m 11s</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="theme-conteiner-list line">
                         <a class="theme-conteiner-item text-violet" href="#">Objects and the DOM
                             <i class="fas fa-chevron-down"></i>
                         </a>
+                        <ul class="theme-conteiner-item-subitem">
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Introduction</p>
+                                    </div>
+                                    <p class="little-text-theme">1m 7s</p>
+                                </a>
+                            </li>
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Installing Development Software</p>
+                                    </div>
+                                    <p class="little-text-theme">3m 11s</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="theme-conteiner-list line">
                         <a class="theme-conteiner-item text-violet" href="#">Arrays
                             <i class="fas fa-chevron-down"></i>
                         </a>
+                        <ul class="theme-conteiner-item-subitem">
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Introduction</p>
+                                    </div>
+                                    <p class="little-text-theme">1m 7s</p>
+                                </a>
+                            </li>
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Installing Development Software</p>
+                                    </div>
+                                    <p class="little-text-theme">3m 11s</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="theme-conteiner-list line">
                         <a class="theme-conteiner-item text-violet" href="#">Scoped and Hoisting
                             <i class="fas fa-chevron-down"></i>
                         </a>
+                        <ul class="theme-conteiner-item-subitem">
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Introduction</p>
+                                    </div>
+                                    <p class="little-text-theme">1m 7s</p>
+                                </a>
+                            </li>
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Installing Development Software</p>
+                                    </div>
+                                    <p class="little-text-theme">3m 11s</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="theme-conteiner-list">
                         <a class="theme-conteiner-item text-violet" href="#">Summary
                             <i class="fas fa-chevron-down"></i>
                         </a>
+                        <ul class="theme-conteiner-item-subitem">
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Introduction</p>
+                                    </div>
+                                    <p class="little-text-theme">1m 7s</p>
+                                </a>
+                            </li>
+                            <li class="theme-conteiner-item-subitem-conteiner">
+                                <a href="#" class="theme-conteiner-subitem-play">
+                                    <div class="theme-conteiner-subitem-play-cont">
+                                        <span class="icon-play">
+                                            <i class="fas fa-play"></i>
+                                        </span>
+                                        <p class="little-text-theme">Installing Development Software</p>
+                                    </div>
+                                    <p class="little-text-theme">3m 11s</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
